@@ -9,6 +9,7 @@ This is what's new and changed in the c-ares 1.5.3 release:
  o library will now be built with _REENTRANT symbol defined if needed
  o Improved configure detection of number of arguments for getservbyport_r
  o Improved query-ID randomness
+ o Validate that DNS response address matches the request address
 
 Thanks go to these friendly people for their efforts and contributions:
 
